// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PageHeader> should match the snapshot 1`] = `
<DocumentFragment>
  <header
    class="leading-9 mb-3 text-center sm:text-left"
  >
    <span
      class="text-xs"
    >
      Librum
    </span>
    <br
      class="block sm:hidden"
    />
    <small
      class="m-0 sm:ml-2 text-blue-500"
    >
      Campaign Companion
    </small>
    <hr
      class="fancy-hr my-1 block sm:hidden"
    />
    <nav
      class="relative z-10"
    >
      <ul
        class="flex flex-col sm:flex-row"
      />
    </nav>
    <hr
      class="fancy-hr mt-1"
    />
  </header>
</DocumentFragment>
`;

exports[`<PageHeader> with navigation: value should match the snapshot 1`] = `
<DocumentFragment>
  <header
    class="leading-9 mb-3 text-center sm:text-left"
  >
    <span
      class="text-xs"
    >
      Librum
    </span>
    <br
      class="block sm:hidden"
    />
    <small
      class="m-0 sm:ml-2 text-blue-500"
    >
      Campaign Companion
    </small>
    <hr
      class="fancy-hr my-1 block sm:hidden"
    />
    <nav
      class="relative z-10"
    >
      <ul
        class="flex flex-col sm:flex-row"
      >
        <li
          class=""
        >
          <p
            class=""
          >
            Home
          </p>
        </li>
        <li
          class=""
        >
          <a
            class=""
            href="/launch-sites"
          >
            Launch Sites
          </a>
        </li>
        <li
          class=""
        >
          <div
            class=""
          >
            <button
              class=""
            >
              Rockets
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-caret-up fa-xs ml-2"
                data-icon="caret-up"
                data-prefix="fas"
                focusable="false"
                role="img"
                viewBox="0 0 320 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M9.39 265.4l127.1-128C143.6 131.1 151.8 128 160 128s16.38 3.125 22.63 9.375l127.1 128c9.156 9.156 11.9 22.91 6.943 34.88S300.9 320 287.1 320H32.01c-12.94 0-24.62-7.781-29.58-19.75S.2333 274.5 9.39 265.4z"
                  fill="currentColor"
                />
              </svg>
            </button>
          </div>
        </li>
        <li
          class=""
        >
          <div
            class=""
          >
            <button
              class=""
            >
              Administration
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-caret-up fa-xs ml-2"
                data-icon="caret-up"
                data-prefix="fas"
                focusable="false"
                role="img"
                viewBox="0 0 320 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M9.39 265.4l127.1-128C143.6 131.1 151.8 128 160 128s16.38 3.125 22.63 9.375l127.1 128c9.156 9.156 11.9 22.91 6.943 34.88S300.9 320 287.1 320H32.01c-12.94 0-24.62-7.781-29.58-19.75S.2333 274.5 9.39 265.4z"
                  fill="currentColor"
                />
              </svg>
            </button>
          </div>
        </li>
      </ul>
    </nav>
    <hr
      class="fancy-hr mt-1"
    />
  </header>
</DocumentFragment>
`;

exports[`<PageHeader> with subtitle: null should match the snapshot 1`] = `
<DocumentFragment>
  <header
    class="leading-9 mb-3 text-center sm:text-left"
  >
    <span
      class="text-xs"
    >
      Librum
    </span>
    <br
      class="block sm:hidden"
    />
    <small
      class="m-0 sm:ml-2 text-blue-500"
    >
      Campaign Companion
    </small>
    <hr
      class="fancy-hr my-1 block sm:hidden"
    />
    <nav
      class="relative z-10"
    >
      <ul
        class="flex flex-col sm:flex-row"
      />
    </nav>
    <hr
      class="fancy-hr mt-1"
    />
  </header>
</DocumentFragment>
`;
